# UniCredit

./: .env.example  .gitignore  .pyre_configuration  CLAUDE.md  GEMINI.md  README.md  VPS_SETUP.md  analysis_options.yaml  build.err  claude_fix.txt  deploy_vps.sh  fix_encoding.py  jobbot.service  linkedin_auth.json  package.json  requirements.txt  run_autonomous_jobs.bat  run_autonomous_jobs.sh  run_autonomous_reports.bat  run_autonomous_reports.sh  run_daily.py  run_scheduler.py  run_service.py  run_telegram_bot.py  run_weekly_report.py  setup_automation.ps1  setup_autonomous_vps.ps1  setup_autonomous_vps.sh  start_vps_automation.ps1  test.err  test_end_to_end.py  test_real_job.py  vercel.json
.claude/: settings.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
LinkedinAutomation/: __init__.py  alert_user.py  anti_detect.py  apply_easy_apply.py  apply_external.py  apply_external_form.py  apply_security.py  credential_store.py  deduplicate_jobs.py  extract_job_intelligence.py  find_connections.py  follow_up_tracker.py  generate_cover_letter.py  generate_daily_report.py  generate_pdf.py  generate_weekly_report.py  interview_prep.py  log_to_sheets.py  mark_job_seen.py  ollama_client.py  openrouter_client.py  resume_writer_agent.py  save_linkedin_auth.py  score_job.py  search_aggregator.py  search_direct_scraper.py  search_firecrawl_jobs.py  (+13 more)
web_scraper/: __init__.py  ai.py  browser.py  captcha.py  cleaner.py  config.py  extractor.py  filters.py  output.py  proxy.py  pyproject.toml  scraper.py  session.py  setup.py  workflow.py
(+421 files in other folders)
